# FlowTask

./: .gitignore  .gitmessage  .pre-commit-config.yaml  LICENSE  Makefile  Procfile  README.md  check_complete.sh  check_setup.sh  check_structure.sh  cli_manager.py  pyproject.toml  quick_check.sh  requirements.txt  test_ia.py  verify_db.py  verify_flow.py
.github/: CODE_REVIEW_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/templates/: RELEASE_NOTES_TEMPLATE.md
.github/workflows/: ci.yml
backend/: test_firebase.py  test_telegram.py
backend/backend/src/domain/events/: models.py
backend/backend/src/domain/nlp/: patterns.py
backend/requirements/: base.txt  dev.txt
backend/src/: main.py  main.py.backup  main_simple.py
backend/src/core/: config.py
backend/src/infrastructure/: firebase_client.py  telegram_client.py
backend/tests/: test_firebase.py  test_telegram.py
docs/architecture/decisions/: YYYYMMDD-decision-name.md
src/flowtask/: main.py
src/flowtask/core/: config.py  logger.py
src/flowtask/domain/: models.py
src/flowtask/domain/nlp/: parser.py
src/flowtask/infrastructure/: ai_engine.py  database.py  firebase.py  telegram.py
src/flowtask/templates/: dashboard.html
