[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist",
  "*.egg-info"
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project]
name = "flowtask"
version = "0.1.0"
description = "Asistente de calendario conversacional"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
  "black>=23.0",
  "flake8>=6.0",
  "isort>=5.12",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pre-commit>=3.0"
]
