[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowtask"
version = "0.1.0"
description = "Sistema inteligente de gestión de tareas vía Telegram"
authors = [{ name = "Tu Nombre", email = "tu@email.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "httpx",
    "python-telegram-bot",
    "firebase-admin",
    "dateparser",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint] # Agrega esta línea
select = ["E", "F", "W", "I", "B", "UP", "N"]